--- a/client/src/app/details/details.styl
+++ b/client/src/app/details/details.styl
@@ -11,25 +11,10 @@ $icon-font-path = "../../../client/bower_components/bootstrap-stylus/fonts/"
  */
 // bower:styl
 // endbower
-.item-title
-    font-size 18px
-    color bkack
-    font-weight bold
-    
-.tel-prew
-    height 300px
-    width 250px
-    
-.btn-add,.price
-    width 75px
-    height 30px
-    background red
-    border 1 px solid black
-    border-radius 10px
-    text-align center
-    color black
-    line-height 30px
-    
+
+.col-md-2 .img-sm
+    width 150px
+    height 75px
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
