--- a/client/src/app/main/main.html
+++ b/client/src/app/main/main.html
@@ -1,12 +1,15 @@
 <div class="container wrapper">
     <div>Main view</div>
     <section id="main" >
+    
         <div class="col-lg-4 col-md-4 text-center" ng-repeat="item in main.items">
-           <img src="http://localhost:4001/api/v1/{{item.imgUrl}}" title="tel" class="tel-prew">
-            <div class="item-title">{{item.name}}</div>
-            <div class="price col-md-offset-10 col-md-2">${{item.price}}</div>
-            <div class="deck">Lorem ipsum</div>
-            <div class=" col-md-offset-10 col-md-2 btn-add">Add</div>
+                <a ui-sref="details({id: item._id})">
+           <img ng-src="http://localhost:4001/api/v1/{{item.imgUrl}}" title="tel" class="tel-prew">
+            <div class="item-title col-md-12">{{item.name}}</div>
+            <div class="price col-md-offset-8 col-md-2">${{item.price}}</div>
+            <div class="deck col-md-12">{{item.description}}</div>
+            <div class=" col-md-offset-8 col-md-2 btn-add">Add</div>
+            </a>
         </div>
     </section>
 </div>
