--- a/client/src/app/components/navbar/navbar.styl
+++ b/client/src/app/components/navbar/navbar.styl
@@ -4,9 +4,9 @@
  */
 // bower:styl
 // endbower
-
+    
 .navbar-wrapper
-    background #feeee0
+     background: -webkit-linear-gradient(top, #2725C7 0%, #0D7DC2 100%)
     
 .navbar
     text-align left
@@ -22,19 +22,29 @@
     padding 10px
     margin-right 20px
     text-transform uppercase
-    color black
     
 .navbar li a 
     text-decoration none
-
-.logo-wrap{
+    color #d9d9d9
+    
+.navbar li a:hover
+    text-decoration none
+    color #ffffff
+    
+.logo-wrap
     font-size 30px
     padding 20px
     font-weight 700
     height 150px
-    background #cdb0d1
-} 
+    background #0D7DC2
     
+.logo-wrap a 
+    text-decoration none
+    color #d9d9d9
+    
+.logo-wrap a:hover
+    text-decoration none
+    color #ffffff
     
     
 /**
