--- a/client/src/app/main/main.styl
+++ b/client/src/app/main/main.styl
@@ -18,12 +18,12 @@ $icon-font-path = "../../../client/bower_components/bootstrap-stylus/fonts/"
     
 .tel-prew
     height 300px
-    width 250px
+    margin 10px auto
     
 .btn-add,.price
     width 75px
     height 30px
-    background red
+    background rgb(240, 101, 101)
     border 1 px solid black
     border-radius 10px
     text-align center
