--- a/client/src/app/details/details.view.html
+++ b/client/src/app/details/details.view.html
@@ -1,17 +1,19 @@
 <div class="container">
     <div>Details</div>
-    <div class="col-md-5">
+    <div class="col-md-7">
         <div class="col-md-12">
             <img ng-src="http://localhost:4001/api/v1/{{details.url}}" title="tel">
         </div>
         <div class="col-md-2" ng-repeat="item in details.item.images">
-             <img ng-src="http://localhost:4001/api/v1/{{item}}" title="tel" class="img-sm">
+             <img ng-src="http://localhost:4001/api/v1/{{item}}" title="tel" class="img-sm" ng-click="details.setImage(item)">
         </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-5">
          <div class="item-title">{{details.item.name}}</div>
          <div class="col-md-12">
+           <h2>Description</h2>
             <div class="description">{{details.item.description[0]}}</div>
+            <div class=" col-md-offset-8 col-md-2 btn-add">Add</div>
         </div>
     </div>
     
