--- a/client/src/app/index.styl
+++ b/client/src/app/index.styl
@@ -11,6 +11,8 @@ $icon-font-path = "../../../client/bower_components/bootstrap-stylus/fonts/"
  */
 // bower:styl
 // endbower
+body
+    background #ffffff
 
 .browsehappy
   margin 0.2em 0
