--- a/client/src/app/index.styl
+++ b/client/src/app/index.styl
@@ -11,6 +11,13 @@ $icon-font-path = "../../../client/bower_components/bootstrap-stylus/fonts/"
  */
 // bower:styl
 // endbower
+@import url(http://weloveiconfonts.com/api/?family=fontawesome)
+
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif
+}
+
 body
     background #ffffff
 
