--- a/client/src/app/details/details.styl
+++ b/client/src/app/details/details.styl
@@ -14,6 +14,54 @@ $icon-font-path = "../../../client/bower_components/bootstrap-stylus/fonts/"
 
 .col-md-2 .img-sm
     height 85px
+ 
+.detail-container
+    position: relative;
+    left 0
+    right 0
+    margin 0px auto
+    top 120px
+    height 700px
+    width 800px
+    background #f0efe8
+    padding 2%
+    border-radius 5%
+    
+.main-form-wrapper
+    width 100%
+    height 100%
+    background rgba(27, 31, 35, 0.6)
+    top 0
+    left 0
+    right 0
+    margin 0px auto
+    position fixed
+    z-index 21
+    
+.close_1:after
+    content "/"
+    color red
+    font-size 28px
+    text-align center
+    
+.close_2:after
+    content "\"
+    color red
+    font-size 28px
+    text-align center
+    
+.close_1
+    transform: rotate(20deg);
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    
+.close_2
+    transform: rotate(10deg);
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
