--- a/client/src/app/components/navbar/navbar.styl
+++ b/client/src/app/components/navbar/navbar.styl
@@ -37,6 +37,7 @@
     font-weight 700
     height 150px
     background #0D7DC2
+    margin-bottom 20px
     
 .logo-wrap a 
     text-decoration none
