--- a/client/src/app/index.styl
+++ b/client/src/app/index.styl
@@ -11,15 +11,12 @@ $icon-font-path = "../../../client/bower_components/bootstrap-stylus/fonts/"
  */
 // bower:styl
 // endbower
-@import url(http://weloveiconfonts.com/api/?family=fontawesome)
-
-/* fontawesome */
-[class*="fontawesome-"]:before {
-  font-family: 'FontAwesome', sans-serif
-}
 
 body
     background #ffffff
+
+h2,h3,h4
+    margin 10px 0 30px
 
 .browsehappy
   margin 0.2em 0
