--- a/client/src/app/components/navbar/navbar.view.html
+++ b/client/src/app/components/navbar/navbar.view.html
@@ -1,5 +1,5 @@
-<header class="container">
-    <div class="navbar-wrapper container text-left">
+<header class="container-fluid navbar-wrapper">
+    <div class=" container text-left">
         <ul class="navbar navbar-nav">
             <li> <a ui-sref="home">home</a></li>
             <li> <a ui-sref="details">about</a></li>
