--- a/client/src/app/components/comments/comments.view.html
+++ b/client/src/app/components/comments/comments.view.html
@@ -1,6 +1,32 @@
-<div class="comments-wrapper">
-    <div class="comment-rating">{{comment.item_rating}}</div>
-    <div class="comment-text">{{comment.text}}</div>
-    <div class="comment-author">{{comment.author}}</div>
-    <div class="comment-date">{{comment.created_on | date}}</div>
-</div>           
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            <h2>Reviews:</h2>
+        </div>
+        <div class="col-lg-2 col-lg-offset-4">
+            <a href="" ng-click="gotoAnchor(x)">
+            <div class="btn btn-comments">Add comments </div>
+            </a>
+        </div>
+    </div>
+    <div class="comments-wrapper">
+        <div class="row">
+            <div class="col-lg-6 comment-author">
+                <h2>{{comment.author}}</h2>
+            </div>
+            <div class="col-lg-2 col-lg-offset-4 comment-rating">{{comment.item_rating}}</div>
+        </div>
+        <div class="comment-text">{{comment.text}}</div>
+        <div class="comment-date text-right">{{comment.created_on | date}}</div>
+    </div> 
+<form role="form" class="form-comments" id="anchor{{x}}">
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input type="text" class="form-control" id="author-name">
+  </div>
+  <div class="form-group">
+    <textarea></textarea>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+</div>
